--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>Ai Hỏi ?</title>
+<title>Ai Hỏi -_-</title>
 <meta property="og:title" content="Who asked?" />
 <meta property="og:description" content="Finding the one that requested for an answer." />
 <style>
