--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div>
             <div class="delayed" id="delayed1">Ai hỏi ?</div>
             <div class="delayed" id="delayed2">Ai quan tâm</div>
-            <div class="delayed" id="delayed3">Fuck you <span class="delayed" id="delayed4">!</span></div>
+            <div class="delayed" id="delayed3">Fuck You <span class="delayed" id="delayed4">-_-</span></div>
         </div>
         <div></div>
     </div>
