--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>Ai Hỏi -_-</title>
-<meta property="og:title" content="Who asked?" />
-<meta property="og:description" content="Finding the one that requested for an answer." />
+<meta property="og:title" content="Ai hỏi ?" />
+<meta property="og:description" content="Đừng nói mấy câu vô ích nữa bro." />
 <style>
     .light {
         background-color: white;
