--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>Ai Hỏi -_-</title>
+<title>Ai Hỏi ?</title>
 <meta property="og:title" content="Ai hỏi ?" />
 <meta property="og:description" content="Đừng nói mấy câu vô ích nữa bro." />
 <style>
