--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div>
             <div class="delayed" id="delayed1">Ai hỏi ?</div>
             <div class="delayed" id="delayed2">Ai quan tâm</div>
-            <div class="delayed" id="delayed3">Fuck You <span class="delayed" id="delayed4"><i class="fa-regular fa-face-rolling-eyes"></i></span></div>
+            <div class="delayed" id="delayed3">Fuck You <span class="delayed" id="delayed4"><i class="fa-regular fa-face-rolling-eyes"></i><i class="fa-solid fa-face-rolling-eyes fa-spin fa-spin-reverse"></i></span></div>
         </div>
         <div></div>
     </div>
