--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta property="og:title" content="Ai hỏi ?" />
 <meta property="og:description" content="Đừng nói mấy câu vô ích nữa bro." />
 <script src="https://kit.fontawesome.com/3426ec3618.js" crossorigin="anonymous"></script>
-<link rel="icon" href="https://animehay.live/themes/img/favicon.ico" />
+<link rel="icon" href="https://animehay.live/themes/img/favicon.icox" />
 <link rel="stylesheet" href="style.css" type="text/css">
 
 <div id="main" class="dark">
@@ -46,7 +46,7 @@
         <div>
             <div class="delayed" id="delayed1">Ai hỏi ?</div>
             <div class="delayed" id="delayed2">Ai quan tâm</div>
-            <div class="delayed" id="delayed3">Fuck You <span class="delayed" id="delayed4"><i class="fa-regular fa-face-rolling-eyes"></i><i class="fa-solid fa-face-rolling-eyes fa-spin fa-spin-reverse"></i></span></div>
+            <div class="delayed" id="delayed3">Fuck You <span class="delayed" id="delayed4"><i class="fa-regular fa-face-rolling-eyes"></i><i class="fa-light fa-face-laugh-squint fa-spin"></i><i class="fa-solid fa-face-rolling-eyes fa-spin fa-spin-reverse"></i></span></div>
         </div>
         <div></div>
     </div>
