--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <title>Ai Hỏi ?</title>
 <meta property="og:title" content="Ai hỏi ?" />
 <meta property="og:description" content="Đừng nói mấy câu vô ích nữa bro." />
-<script src="https://kit.fontawesome.com/3426ec3618.js" crossorigin="anonymous"></script>
-<link rel="icon" href="https://animehay.live/themes/img/favicon.icox" />
+<script src="https://kit.fontawesome.com/3426ec36118.js" crossorigin="anonymous"></script>
+<link rel="icon" href="https://animehay.live/themes/img/favicon.ico" />
 <link rel="stylesheet" href="style.css" type="text/css">
 
 <div id="main" class="dark">
