--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <meta property="og:title" content="Ai hỏi ?" />
 <meta property="og:description" content="Đừng nói mấy câu vô ích nữa bro." />
 <script src="https://kit.fontawesome.com/3426ec3618.js" crossorigin="anonymous"></script>
-<link rel="icon" href="https://animehay.live/themes/img/favicon.ico" />
+<link rel="icon" href="https://animehay.io/themes/img/favicon.ico" />
 <link rel="stylesheet" href="style.css" type="text/css">
 
 <div id="main" class="dark">
     <div class="spaced-flex" style="width: 100%; z-index: 100; position: absolute;">
         <div></div>
         <div id="switcher" style="padding: 1rem 1rem 1rem 1rem;">
-            <svg class="fa-regular fa-moon fa-shake"> viewBox="0 0 512 512" id="moon">
-                <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M421.6 379.9c-.6641 0-1.35 .0625-2.049 .1953c-11.24 2.143-22.37 3.17-33.32 3.17c-94.81 0-174.1-77.14-174.1-175.5c0-63.19 33.79-121.3 88.73-152.6c8.467-4.812 6.339-17.66-3.279-19.44c-11.2-2.078-29.53-3.746-40.9-3.746C132.3 31.1 32 132.2 32 256c0 123.6 100.1 224 223.8 224c69.04 0 132.1-31.45 173.8-82.93C435.3 389.1 429.1 379.9 421.6 379.9zM255.8 432C158.9 432 80 353 80 256c0-76.32 48.77-141.4 116.7-165.8C175.2 125 163.2 165.6 163.2 207.8c0 99.44 65.13 183.9 154.9 212.8C298.5 428.1 277.4 432 255.8 432z"/>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" id="moon">
+                <i class="fa-regular fa-moon fa-shake"></i>
             </svg>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" id="sun" class="svg-filter-white">
                 <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
@@ -26,7 +26,7 @@
         <div>
             <div class="delayed" id="delayed1">Ai hỏi ?</div>
             <div class="delayed" id="delayed2">Ai quan tâm</div>
-            <div class="delayed" id="delayed3">Fuck You <span class="delayed" id="delayed4"><i class="fa-regular fa-face-rolling-eyes"></i><i class="fa-light fa-face-laugh-squint fa-spin"></i><i class="fa-solid fa-face-rolling-eyes fa-spin fa-spin-reverse"></i></span></div>
+            <div class="delayed" id="delayed3">Fuck You <span class="delayed" id="delayed4"></i><i class="fa-light fa-face-laugh-squint fa-spin"></i></span></div>
         </div>
         <div></div>
     </div>
