--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <i class="fa-regular fa-moon fa-shake"></i>
             </svg>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" id="sun" class="svg-filter-white">
-                <i class="fa-regular fa-sun fa-spin"></i>
+                <i class="fa-regular fa-sun fa-spin fa-2xl"></i>
             </svg>
         </div>
 
