--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="spaced-flex" style="width: 100%; z-index: 100; position: absolute;">
         <div></div>
         <div id="switcher" style="padding: 1rem 1rem 1rem 1rem;">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" id="moon">
+            <svg id="moon">
                 <i class="fa-regular fa-moon fa-shake"></i>
             </svg>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" id="sun" class="svg-filter-white">
