--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div>
             <div class="delayed" id="delayed1">Ai hỏi ?</div>
             <div class="delayed" id="delayed2">Ai quan tâm</div>
-            <div class="delayed" id="delayed3">Fuck You <span class="delayed" id="delayed4"></i><i class="fa-light fa-face-laugh-squint fa-spin"></i></span></div>
+            <div class="delayed" id="delayed3">Fuck You <span class="delayed" id="delayed4"></i><i class="fa-regular fa-thumbs-down fa-beat"></i></span></div>
         </div>
         <div></div>
     </div>
