--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div id="root" class="spaced-flex">
         <div></div>
         <div>
-            <div class="delayed" id="delayed1">Ai hỏi ?</div>
-            <div class="delayed" id="delayed2">Ai quan tâm</div>
+            <div class="delayed" id="delayed1">Ai Hỏi ?</div>
+            <div class="delayed" id="delayed2">Ai Quan Tâm</div>
             <div class="delayed" id="delayed3">Fuck You</div>
             <div class="delayed" id="delayed4"><i class="fa-regular fa-thumbs-down fa-shake"></i></div>
         </div>
