--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div>
             <div class="delayed" id="delayed1">Ai Hỏi ?</div>
             <div class="delayed" id="delayed2">Ai Quan Tâm</div>
-            <div class="delayed" id="delayed3">Fuck You <span class="delayed" id="delayed4"><i class="fa-regular fa-face-meh"></i></span></div>
+            <div class="delayed" id="delayed3"> <span class="delayed" id="delayed4"><i class="fa-regular fa-face-meh"></i></span></div>
             <div class="delayed" id="delayed5">Không Ai Quan Tâm</div>
-            <div class="delayed" id="delayed6"><i class="fa-regular fa-thumbs-down fa-shake"></i></div>
+            <div class="delayed" id="delayed6"> <i class="fa-regular fa-thumbs-down fa-shake"></i></div>
         </div>
         <div></div>
     </div>
