--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta property="og:title" content="Ai hỏi ?" />
 <meta property="og:description" content="Đừng nói mấy câu vô ích nữa bro." />
 <script src="https://kit.fontawesome.com/3426ec3618.js" crossorigin="anonymous"></script>
-<link rel="icon" href="https://cdn1.iconfinder.com/data/icons/finger-line-vol1/64/icn_finger_fuckyou-512.png" />
+<link rel="icon" href="https://static.vecteezy.com/system/resources/previews/007/013/517/original/fuck-symbol-icon-black-color-in-circle-or-round-vector.jpg" />
 <link rel="stylesheet" href="style.css" type="text/css">
 
 <div id="main" class="dark">
