--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="delayed" id="delayed1">Ai Hỏi ?</div>
             <div class="delayed" id="delayed2">Ai Quan Tâm ?</div>
             <div class="delayed" id="delayed3"><i class="fa-regular fa-face-meh"></i></span></div>
-            <div class="delayed" id="delayed4">Không Ai Quan Tâm</div>
+            <div class="delayed" id="delayed4">WHAT THE FUCK</div>
         </div>
         <div></div>
     </div>
